Fix side UI on mobile regression.
Also fix typo.

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -62,33 +62,33 @@
 	 * Hovered Block style
 	 */
 
-	&.is-selected .editor-block-mover:before,
-	&.is-hovered .editor-block-mover:before,
-	&.is-selected .editor-block-settings-menu:before,
-	&.is-hovered .editor-block-settings-menu:before {
+	&.is-selected > .editor-block-mover:before,
+	&.is-hovered > .editor-block-mover:before,
+	&.is-selected > .editor-block-settings-menu:before,
+	&.is-hovered > .editor-block-settings-menu:before {
 		content: '';
 		position: absolute;
 		height: 36px;
 		top: 10px;
 	}
 
-	&.is-selected .editor-block-mover:before,
-	&.is-hovered .editor-block-mover:before {
+	&.is-selected > .editor-block-mover:before,
+	&.is-hovered > .editor-block-mover:before {
 		border-right: 1px solid $light-gray-500;
 		right: 6px;
 	}
 
-	&.is-reusable.is-selected .editor-block-mover:before {
+	&.is-reusable.is-selected > .editor-block-mover:before {
 		border-right: none;
 	}
 
-	&.is-selected .editor-block-settings-menu:before,
-	&.is-hovered .editor-block-settings-menu:before {
+	&.is-selected > .editor-block-settings-menu:before,
+	&.is-hovered > .editor-block-settings-menu:before {
 		border-left: 1px solid $light-gray-500;
 		left: 6px;
 	}
 
-	&.is-reusable.is-selected .editor-block-settings-menu:before {
+	&.is-reusable.is-selected > .editor-block-settings-menu:before {
 		border-left: none;
 	}
 
@@ -326,15 +326,15 @@
 	 * Left and right side UI
 	 */
 
-	.editor-block-settings-menu,
-	.editor-block-mover {
+	> .editor-block-settings-menu,
+	> .editor-block-mover {
 		position: absolute;
 		top: 0;
 		padding: 0;
 	}
 
 	// Right side UI
-	.editor-block-settings-menu {
+	> .editor-block-settings-menu {
 		right: #{ -1 * $block-mover-margin - $block-padding + 2px };
 		padding-top: 2px;
 
@@ -347,7 +347,7 @@
 	}
 
 	// Left side UI
-	.editor-block-mover {
+	> .editor-block-mover {
 		left: -$block-mover-margin - $block-padding + 4px;
 		padding-top: 6px;
 		z-index: z-index( '.editor-block-mover' );
